# qpet

./: CMakeLists.txt  README.md  compile_commands.json
.cache/clangd/index/: ACubismMotion.cpp.777BD8C3F39F9609.idx  ACubismMotion.hpp.5C4204A22D476D03.idx  CMakeCCompilerId.c.1DCCDC71EF8929D7.idx  CMakeCCompilerId.c.C8EF892636773C45.idx  CMakeCXXCompilerId.cpp.C9D3A619CB1FFE17.idx  CMakeCXXCompilerId.cpp.F48E607844BD6214.idx  CubismBasicType.hpp.8C7FEE567138822A.idx  CubismBreath.cpp.6241FD5017A44ACB.idx  CubismBreath.hpp.F593CB2CEAB1DF9A.idx  CubismCdiJson.cpp.DC0E68505FB71389.idx  CubismCdiJson.hpp.46C41677254D4BF1.idx  CubismClippingManager.hpp.237B7F1C31130D18.idx  CubismClippingManager.tpp.1922D3546D759D0E.idx  CubismDebug.cpp.EF7BF5CA251D9BF3.idx  CubismDebug.hpp.652B828EDE4905C0.idx  CubismDefaultParameterId.cpp.C6C3822FAC7FCA35.idx  CubismDefaultParameterId.hpp.6F790D89EFABB477.idx  CubismExpressionMotion.cpp.71FF9443C3A36F56.idx  CubismExpressionMotion.hpp.54C91CB0529EDC13.idx  CubismExpressionMotionManager.cpp.6A27B816B53F27AA.idx  CubismExpressionMotionManager.hpp.7B4EF1D7C1DF91E2.idx  CubismEyeBlink.cpp.2CE80F61549A2D36.idx  CubismEyeBlink.hpp.0E7B71B9A1FA6776.idx  CubismFramework.cpp.D6FBA53234C5BC72.idx  CubismFramework.hpp.287A6851CC76E806.idx  CubismFrameworkConfig.hpp.40A7A892DDE1C195.idx  CubismId.cpp.5E7095A30C734F73.idx  CubismId.hpp.08838B8248F799CA.idx  CubismIdManager.cpp.A9841A18133AE6A0.idx  CubismIdManager.hpp.F2E9C8C9626D9090.idx  CubismJson.cpp.9B18B32B096982F8.idx  CubismJson.hpp.51F6D55FBEBD6329.idx  CubismJsonHolder.hpp.4D5D4CDB81D59C10.idx  CubismMath.cpp.3FB3B015D5B4A9E1.idx  CubismMath.hpp.0B99B44C8FC492E3.idx  CubismMatrix44.cpp.4F174AD28ADBF6B6.idx  CubismMatrix44.hpp.02814CE11D0CCBEC.idx  CubismMoc.cpp.D7F50E67F47D3ED1.idx  CubismMoc.hpp.30C8027115E6BF6C.idx  CubismModel.cpp.84FA8A2E1F939646.idx  (+488 more)
framework/src/: CubismCdiJson.cpp  CubismCdiJson.hpp  CubismDefaultParameterId.cpp  CubismDefaultParameterId.hpp  CubismFramework.cpp  CubismFramework.hpp  CubismFrameworkConfig.hpp  ICubismAllocator.hpp
framework/src/Effect/: CubismBreath.cpp  CubismBreath.hpp  CubismEyeBlink.cpp  CubismPose.hpp
framework/src/Id/: CubismId.hpp  CubismIdManager.cpp
framework/src/Math/: CubismMath.cpp  CubismVector2.hpp  CubismViewMatrix.cpp
framework/src/Model/: CubismModel.cpp  CubismModel.hpp  CubismModelUserDataJson.hpp  CubismUserModel.cpp
framework/src/Motion/: ACubismMotion.cpp  CubismExpressionMotion.cpp  CubismExpressionMotion.hpp  CubismExpressionMotionManager.hpp  CubismMotion.cpp  CubismMotionJson.hpp  CubismMotionManager.cpp
framework/src/Physics/: CubismPhysics.cpp  CubismPhysics.hpp  CubismPhysicsInternal.hpp  CubismPhysicsJson.cpp
framework/src/Rendering/: CubismRenderer.cpp  CubismRenderer.hpp
framework/src/Rendering/OpenGL/: CubismOffscreenSurface_OpenGLES2.cpp  CubismOffscreenSurface_OpenGLES2.hpp  CubismRenderer_OpenGLES2.cpp  CubismRenderer_OpenGLES2.hpp  CubismShader_OpenGLES2.cpp  CubismShader_OpenGLES2.hpp
framework/src/Type/: csmMap.hpp  csmRectF.cpp  csmRectF.hpp  csmString.hpp  csmVector.hpp
framework/src/Utils/: CubismJson.cpp  CubismJson.hpp  CubismString.cpp
live2d/core/include/: Live2DCubismCore.h
live2d/framework/: CMakeLists.txt
live2d/framework/src/: CubismJsonHolder.hpp  CubismModelSettingJson.cpp  CubismModelSettingJson.hpp  ICubismModelSetting.hpp  Live2DCubismCore.hpp
live2d/framework/src/Effect/: CubismEyeBlink.hpp  CubismPose.cpp
live2d/framework/src/Id/: CubismId.cpp  CubismIdManager.hpp
live2d/framework/src/Math/: CubismMath.hpp  CubismMatrix44.cpp  CubismMatrix44.hpp  CubismModelMatrix.cpp  CubismModelMatrix.hpp  CubismTargetPoint.hpp  CubismVector2.cpp  CubismViewMatrix.hpp
live2d/framework/src/Model/: CubismMoc.cpp  CubismMoc.hpp  CubismModelUserData.cpp  CubismModelUserData.hpp  CubismModelUserDataJson.cpp  CubismUserModel.hpp
live2d/framework/src/Motion/: ACubismMotion.hpp  CubismExpressionMotionManager.cpp  CubismMotion.hpp  CubismMotionInternal.hpp  CubismMotionJson.cpp  CubismMotionManager.hpp  CubismMotionQueueEntry.cpp  CubismMotionQueueEntry.hpp  CubismMotionQueueManager.cpp  CubismMotionQueueManager.hpp
live2d/framework/src/Physics/: CubismPhysicsJson.hpp
live2d/framework/src/Rendering/: CMakeLists.txt  CubismClippingManager.hpp
live2d/framework/src/Rendering/OpenGL/: CubismRenderer_OpenGLES2.cpp  CubismRenderer_OpenGLES2.hpp  CubismShader_OpenGLES2.cpp  CubismShader_OpenGLES2.hpp  OpenGLExtraFunctions.hpp
live2d/framework/src/Type/: CubismBasicType.hpp  csmString.cpp
live2d/framework/src/Utils/: CubismDebug.cpp  CubismDebug.hpp  CubismString.hpp
res/: style.qss
res/Hiyori_Pro/: Hiyori_Pro.model3.json
res/live2d/ATRI/: ATRI.model3.json
res/ui/: style.qss
scripts/: make_gcc  tab-format
src/: Application.cpp  Application.hpp  CMakeLists.txt  ChatWidget.hpp  main.cpp  ui.hpp
src/live2dwidget/: CMakeLists.txt  CubismSampleViewMatrix.cpp  CubismSampleViewMatrix.hpp  CubismUserModelExtend.cpp  CubismUserModelExtend.hpp  LAppAllocator.cpp  LAppAllocator.hpp  LAppDefine.cpp  LAppDefine.hpp  LAppDelegate.cpp  LAppDelegate.hpp  LAppLive2DManager.cpp  LAppLive2DManager.hpp  LAppModel.cpp  LAppModel.hpp  LAppPal.cpp  LAppPal.hpp  LAppSprite.cpp  LAppSprite.hpp  LAppTextureManager.cpp  LAppTextureManager.hpp  LAppView.cpp  LAppView.hpp  LAppWavFileHandler.cpp  LAppWavFileHandler.hpp  Live2dWidget.cpp  Live2dWidget.hpp  MouseActionManager.cpp  MouseActionManager.hpp  OpenGLExtraFunctions.hpp  TouchManager.cpp  TouchManager.hpp
src/modelapi/: CMakeLists.txt  OllamaApi.cpp  OllamaApi.hpp  PiperTTSApi.cpp  PiperTTSApi.hpp  TextParser.cpp  TextParser.hpp
src/pipertts/: CMakeLists.txt  piper.cpp  piper.hpp  tts.cpp  tts.hpp  wavfile.hpp
stb/: stb_image.h
